--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <sampleEditor></sampleEditor>
 <ng4-loading-spinner [threshold]="1000" [timeout]="18000" [template]="template" [loadingText]="'Please wait...'" [zIndex]="9999">
 </ng4-loading-spinner>
+<!-- <app-city></app-city> -->
 <!-- Contenedor -->
 <!-- <ul id="accordion" class="accordion">
     <li>
