--- a/src/app/components/delivery/delivery.component.css
+++ b/src/app/components/delivery/delivery.component.css
@@ -6,5 +6,8 @@
 }
 .vendor-delete{
     margin-left: 15px;
-    color: #03a9f3;
+    color: #03a9f3!important;
+}
+.vendor-button:hover{
+    color: #fff!important;
 }
