--- a/src/app/components/categories/add.sub.cat.html
+++ b/src/app/components/categories/add.sub.cat.html
@@ -37,7 +37,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Sub Category Image</label>
-                                            <input class="form-control" type="file" accept="image/*" (change)="changeListener($event)">
+                                            <input class="form-control" type="file" accept="image/*" (change)="changeListener($event)" [(ngModel)]="img" name="img">
                                             <div *ngIf="image">
                                                 <img src="{{image}}" alt="" width="100" height="100" style="border: solid 1px;margin-top: 2%;">
                                             </div>
