--- a/src/app/components/location/location.component.html
+++ b/src/app/components/location/location.component.html
@@ -34,7 +34,7 @@
                                                 </th>
                                                 <th>City</th>
                                                 <th>Area</th>
-                                                <th>Delete </th>
+                                                <th>Action </th>
                                             </tr>
                                         </thead>
                                         <tbody>
