--- a/src/app/components/offers/add.offer.html
+++ b/src/app/components/offers/add.offer.html
@@ -23,14 +23,14 @@
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="firstname">Coupon Code</label>
-                                            <input id="category" class="form-control" name="coupon" type="text" [(ngModel)]="coupon" />
+                                            <input id="category" class="form-control" type="text" [(ngModel)]="coupon" [ngModelOptions]="{standalone: true}" />
                                         </div>
                                         <div class="form-group">
                                             <label for="sel1">Discount type</label>
-                                            <select class="form-control border-primary" id="sel1" (change)="discount($event.target.value)">
+                                            <select class="form-control border-primary" id="sel1" (change)="discount($event.target.value)" [(ngModel)]="discountType">
                                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                                <option value="" disabled selected hidden>Select Discount type</option>
-                                                <option *ngFor="let item of DisType | keyvalue" [value]="item.key">{{item.value}}</option>
+                                                <!-- <option value="" disabled selected hidden>Select Discount type</option> -->
+                                                <option *ngFor="let item of DisType | keyvalue" [value]="item.key" [selected]="item.key==mySelect">{{item.value}}</option>
                                                 <!-- <option value="1">Flat</option>
                                                 <option value="2">Percentage</option> -->
                                                 <!-- <option value="3">Free Delivery</option> -->
