--- a/src/app/components/products/add.product.html
+++ b/src/app/components/products/add.product.html
@@ -195,8 +195,6 @@
                                                             <label for="firstname" name="prodName">Sku Images :
                                                             </label>
                                                             <input class="form-control" type='file' (change)="onSelectFile($event,i,skuValues.skid)" multiple><br/>
-
-
                                                             <div *ngIf="!removeImg">
                                                                 <img *ngFor='let url of skuValues.sku_images' [src]="url.sku_image" height="100" (click)="updateImage(url.id,url.sku_id,url.sku_image)"
                                                                     [ngClass]="{'selected':selectedImage==url.id}" width="100"
@@ -230,9 +228,11 @@
                                                             <mat-slide-toggle (change)="foodType($event.checked,i)" [(ngModel)]="type" name="type">Veg
                                                                 or Non-Veg (optional)
                                                             </mat-slide-toggle>
-                                                            <!-- <div class="margin" *ngFor="let item of radio">
+                                                            <!-- <div class="margin" *ngFor="let item of radio;let idx = index" class="radio-inline">
                                                                 <label>
-                                                                    <input type="radio" name="options" value="{{item.title}}" (change)="radioType($event.target.value)" />                                                                    &nbsp;{{item.title}}
+                                                                    <input type="radio" [(ngModel)]="person.testBoolean" name="radiogroup" [checked]="entry.id === default" [value]="entry.id"
+                                                                    />{{item.title}}
+                                                                    &nbsp;{{item.title}}
                                                                 </label>
                                                             </div> -->
                                                         </div>
