--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -15,6 +15,24 @@
                     <span class="menu-title sub">Sub Categories </span>
                 </a>
             </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='city' || pageNav==='addcity'}">
+                <a class="nav-link" routerLink="/city">
+                    <i class="fa fa-map-marker"></i>
+                    <span class="menu-title sub">City</span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='area' || pageNav==='addarea'}">
+                <a class="nav-link" routerLink="/area">
+                    <i class="fa fa-map-marker"></i>
+                    <span class="menu-title sub">Area</span>
+                </a>
+            </li>
+            <li class="nav-item" [ngClass]="{'active':pageNav==='WareHouse' || pageNav==='addwarehouse' }">
+                <a class="nav-link" routerLink="/WareHouse">
+                    <i class="fa fa-map-marker"></i>
+                    <span class="menu-title sub">WareHouse Management</span>
+                </a>
+            </li>
             <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
                 <a class="nav-link" routerLink="/vendors">
                     <i class="icon-people menu-icon"></i>
@@ -55,32 +73,26 @@
                 <li routerLink="/offersBanners" routerLinkActive='active'><a>Best Offers</a></li>
                 <li routerLink="/helpBanners" routerLinkActive='active'><a>Help Banners</a></li>
             </ul>
-            <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
-                <a class="nav-link" routerLink="/location">
-                    <i class="fa fa-map-marker"></i>
-                    <span class="menu-title sub">Location Management</span>
-                </a>
-            </li>
-
             <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
                 <a class="nav-link" routerLink="/location">
                     <i class="fa fa-map-marker"></i>
                     <span class="menu-title sub">Location Management</span>
                 </a>
-            </li>
+            </li> -->
+
             <li class="nav-item" [ngClass]="{'active':pageNav==='delivery' || pageNav==='addDelivery'}">
                 <a class="nav-link" routerLink="/delivery">
                     <i class="fa fa-truck" aria-hidden="true"></i>
                     <span class="menu-title sub">Delivery Handling</span>
                 </a>
             </li>
-            <li class="nav-item" [ngClass]="{'active':pageNav==='slot' || pageNav==='addslot'}">
+            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='slot' || pageNav==='addslot'}">
                 <a class="nav-link" routerLink="/slot">
                     <i class="fa fa-truck" aria-hidden="true"></i>
                     <span class="menu-title sub">Delivery Slot</span>
                 </a>
-            </li>
-            <li class="nav-item" [ngClass]="{'active':pageNav==='orders'}">
+            </li> -->
+            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='orders'}">
                 <a class="nav-link" routerLink="/orders">
                     <i class="icon-drawer menu-icon"></i>
                     <span class="menu-title">Orders </span>
