--- a/src/app/components/area/area.component.html
+++ b/src/app/components/area/area.component.html
@@ -36,15 +36,15 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr class="todo-list" *ngFor="let area of areas | filter:filter;let i = index">
+                                            <tr class="todo-list" *ngFor="let item of areas | filter:filter;let i = index">
                                                 <td>{{i+1}}</td>
                                                 <td>area</td>
-                                                <td>{{area.area}}</td>
+                                                <td>{{item.area}}</td>
 
                                                 <td>
-                                                    <button class="btn remove btn-outline-primary" (click)="editArea(area.id)">Edit
+                                                    <button class="btn remove btn-outline-primary" (click)="editArea(item.id)">Edit
                                                     </button>
-                                                    <button class="btn remove btn-outline-primary" (click)="deleteAreas(area.id)">Delete
+                                                    <button class="btn remove btn-outline-primary" (click)="deleteAreas(item.id)">Delete
                                                     </button>
                                                 </td>
                                             </tr>
