--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -107,6 +107,9 @@ label{
     text-decoration: none;
     transition: background-color .3s;
   }
+  .m-t{
+      margin-top: 15px;
+  }
   
   .pagination a.active {
     background-color:#2199e8;
