--- a/src/app/components/city/addcity.component.html
+++ b/src/app/components/city/addcity.component.html
@@ -32,7 +32,7 @@
                                 <form style="margin-top:30px;">
                                     <div class="form-group">
                                         <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control"
-                                            #search [formControl]="searchControl" style="width: 400px;">
+                                            #search [formControl]="searchControl" style="width: 400px;" [(ngModel)]="city">
                                     </div>
                                     <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom">
                                         <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
