--- a/src/app/components/products/add.product.html
+++ b/src/app/components/products/add.product.html
@@ -251,7 +251,7 @@
                                                                     <input type="checkbox" name="options" value="{{item.title}}" [checked]="list.indexOf(item) == 0" [disabled]="list.indexOf(item) == 0"
                                                                         (click)="checkbox($event.target.checked,item.id,item,i)"
                                                                     />                                                                    &nbsp;{{item.title}}
-                                                                    {{option}}
+                                                                    <!-- {{option}} -->
                                                                 </label>
                                                             </div>
                                                         </div>
