--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -86,12 +86,12 @@
                     <span class="menu-title sub">Delivery Handling</span>
                 </a>
             </li>
-            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='slot' || pageNav==='addslot'}">
+            <li class="nav-item" [ngClass]="{'active':pageNav==='slot' || pageNav==='addslot'}">
                 <a class="nav-link" routerLink="/slot">
                     <i class="fa fa-truck" aria-hidden="true"></i>
                     <span class="menu-title sub">Delivery Slot</span>
                 </a>
-            </li> -->
+            </li>
             <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='orders'}">
                 <a class="nav-link" routerLink="/orders">
                     <i class="icon-drawer menu-icon"></i>
