--- a/src/app/components/ware-house/ware-house.component.css
+++ b/src/app/components/ware-house/ware-house.component.css
@@ -4,3 +4,9 @@
 .vendor-button{
     background-color: #0d3d66;
 }
+.todo-list td{
+    max-width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
