--- a/src/app/components/offers/add.offer.html
+++ b/src/app/components/offers/add.offer.html
@@ -27,10 +27,11 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="sel1">Discount type</label>
-                                            <select class="form-control border-primary" id="sel1" (change)="discount($event.target.value)" [(ngModel)]="discountType">
+                                            <select class="form-control border-primary" id="sel1" (change)="discount($event.target.value)" [(ngModel)]="data.discountType"
+                                                name="dickType">
                                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                                <!-- <option value="" disabled selected hidden>Select Discount type</option> -->
-                                                <option *ngFor="let item of DisType | keyvalue" [value]="item.key" [selected]="item.key==mySelect">{{item.value}}</option>
+                                                <option value="" disabled>Select Discount type</option>
+                                                <option *ngFor="let item of DisType" value="{{item.id}}">{{item.name}}</option>
                                                 <!-- <option value="1">Flat</option>
                                                 <option value="2">Percentage</option> -->
                                                 <!-- <option value="3">Free Delivery</option> -->
@@ -54,11 +55,11 @@
                                         </div>
                                         <div class="form-group date date-picker">
                                             <label>Start date: </label>
-                                            <my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="model" required></my-date-picker>
+                                            <my-date-picker name="model" [options]="myDatePickerOptions" [(ngModel)]="model" required></my-date-picker>
                                         </div>
                                         <div class="form-group date date-picker">
                                             <label>End date: </label>
-                                            <my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="model1" required></my-date-picker>
+                                            <my-date-picker name="model1" [options]="myDatePickerOptions" [(ngModel)]="model1" required></my-date-picker>
                                         </div>
                                         <button type="submit" class="btn btn-primary vendor-button" *ngIf="!offerId" (click)="addOffer()">
                                             Add Coupon
